WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255338
REGRESSION (
260399@main
): animations flicker on
https://payto.com.au
https://bugs.webkit.org/show_bug.cgi?id=255338
Summary
REGRESSION (260399@main): animations flicker on https://payto.com.au
Antoine Quint
Reported
2023-04-12 07:21:09 PDT
Visit
https://payto.com.au
and scroll down to the “Payments that keep business moving” section. The orange animated lines under each item flickers. They animate smoothly in Firefox.
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2023-04-12 07:21:24 PDT
rdar://107532064
Antoine Quint
Comment 2
2023-04-12 07:24:41 PDT
This site ends up creating a CSS Transition for the same property that is also affected by a CSS Animation. Because the CSS Transition is created after the CSS Animation, it ends up overriding the CSS Animation even though the composite order is the other way around. We need to ensure that updating accelerated actions preserves the stacking order.
Antoine Quint
Comment 3
2023-04-12 07:26:52 PDT
Whether it is correct in this case to create CSS Transitions in this case is being discussed in
https://github.com/w3c/csswg-drafts/issues/8701
.
Antoine Quint
Comment 4
2023-04-12 07:40:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12651
EWS
Comment 5
2023-04-12 11:10:51 PDT
Committed
262875@main
(d566d000c7a5): <
https://commits.webkit.org/262875@main
> Reviewed commits have been landed. Closing PR #12651 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug